# internal/model/topup.go
@@ -9,3 +9,14 @@ type Topup struct {
 	UserID int
 	User   User
 }
+
+// TopupBalanceRequest data structure
+type TopupBalanceRequest struct {
+	Amount      int    `json:"amount"`
+	PhoneNumber string `json:"phone_number"`
+}
+
+// TopupBalanceResponse data structure
+type TopupBalanceResponse struct {
+	LatestBalance int `json:"latest_balance"`
+}
