# internal/model/user.go
@@ -6,10 +6,10 @@ import "gorm.io/gorm"
 type User struct {
 	gorm.Model
 	Name        string `json:"name"`
-	Username    string `json:"username"`
-	Email       string `json:"email"`
+	Username    string `json:"username" gorm:"unique"`
+	Email       string `json:"email" gorm:"unique"`
 	Password    string `json:"-"`
-	PhoneNumber string `json:"phone_number"`
+	PhoneNumber string `json:"phone_number" gorm:"unique"`
 }
 
 // UserRegisterRequest data structure
